# diff-feas-pump

./: README.md  pyproject.toml  ruff.toml  test_structure.py
src/difffeaspump/core/: mip.py
tests/: test_mip.py
