[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-feas-pump"
version = "0.1.0"
description = "Differentiable Feasibility Pump CLI and library"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gurobipy",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "torch>=1.9.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
dfp = "difffeaspump.cli:main"